Refine ECIP-1115: Clarify Governance-Layer Scope, Invariants, and Optionality (#545)
* Clarify ECIP-1115 language to remove ambiguity

This update refines the Motivation and Specification sections of ECIP-1115 to eliminate ambiguous phrasing around smoothing, Treasury-held BASEFEE, miner incentives, and monetary policy. It strengthens clarity on governance-layer scope, consensus-layer neutrality, and the relationship to ECIP-1017, ECIP-1111, and ECIP-1112, while reducing redundancy and ensuring the document cannot be misinterpreted as modifying consensus-layer incentives or creating miner entitlements.

* Add focused References & Related Work section to ECIP-1115

This update adds a trimmed and scope-aligned References & Related Work section to ECIP-1115. The new section includes only sources directly relevant to governance-layer smoothing—academic foundations, governance scheduling precedents, DAO-level recurring payout patterns, and alignment with Olympia’s architecture—while excluding examples tied to ECIP-1111 through ECIP-1114 or consensus-layer behavior.

* Clarify ECIP-1115 smoothing invariants and governance-layer scope

- Tighten ECIP-1115 language to emphasize optional, governance-layer-only smoothing.
- Explicitly state no changes to consensus, BASEFEE mechanics, tips, or ECIP-1017 issuance.
- Clarify that smoothing creates no rights, reservations, or obligations against the Treasury.
- Add invariants for Treasury immutability, no new state, and no module bypass of Gov→Timelock→Executor.
- Reinforce default-off behavior and fork-safety when activating or deactivating smoothing.

* Update ecip-1115.md

--- a/_specs/ecip-1115.md
+++ b/_specs/ecip-1115.md
@@ -13,11 +13,11 @@ license: CC0-1.0
 
 ### Simple Summary
 
-This ECIP introduces an optional governance-layer mechanism that smooths a configurable portion of Treasury-held BASEFEE revenue across a future window using a deterministic L-curve. The mechanism reshapes the timing of BASEFEE-derived incentives to provide a more predictable miner revenue profile as fixed issuance declines. All parameters are fully configurable through the Olympia Improvement Proposal (OIP) process.
+This ECIP introduces an optional governance-layer mechanism that applies a deterministic L-curve to a governance-selected portion of Treasury-held BASEFEE revenue across a future window, only if smoothing is explicitly activated through an OIP. The mechanism reshapes the timing of BASEFEE-derived incentives to provide a more predictable miner revenue profile if governance elects to use smoothing for miner payouts; this ECIP does not mandate such use, and smoothing remains entirely optional. All parameters are fully configurable through the Olympia Improvement Proposal (OIP) process.
 
 ### Abstract
 
-This ECIP specifies a governance-layer framework for applying an L-curve smoothing function to Treasury-held BASEFEE revenue. After each block’s `basefee` amount is deposited into the Olympia Treasury under ECIP-1111 and ECIP-1112, a configurable portion may be smoothed across a governance-defined future window. The mechanism produces a predictable revenue schedule without altering consensus-layer EIP-1559 behavior.
+This ECIP specifies a governance-layer framework for applying an L-curve smoothing function to Treasury-held BASEFEE revenue. After each block’s `basefee` amount is deposited into the Olympia Treasury under ECIP-1111 and ECIP-1112, a configurable portion may be smoothed across a governance-defined future window. The mechanism operates strictly after consensus-layer deposit into the Treasury and produces a predictable revenue schedule without altering consensus-layer EIP-1559 behavior or block-processing rules.
 
 Smoothed payouts are authorized solely through the Governor → Timelock → Executor pipeline defined in ECIP-1113 and expressed as standard Treasury withdrawals under ECIP-1114. All operational parameters—window length, weighting function, allocation fraction, and miner distribution policy—are set or modified exclusively through the Olympia Improvement Proposal (OIP) process.
 
@@ -25,9 +25,9 @@ Smoothed payouts are authorized solely through the Governor → Timelock → Exe
 
 As Ethereum Classic’s fixed-emission schedule (ECIP-1017) continues to reduce block subsidies over time, priority fees (tips—defined in Type-2 transactions as `maxPriorityFeePerGas` and implicit in `gasPrice` for Type-0 and Type-1) remain the primary consensus-level fee mechanism for miners. These variable priority fees directly reward block producers and continue to anchor Proof-of-Work incentives regardless of how the BASEFEE is handled.
 
-Under ECIP-1111 and ECIP-1112, 100% of the BASEFEE is redirected to the Olympia Treasury. Any decision to allocate a portion of that Treasury-held BASEFEE back to miners is optional, fully governed through OIPs, and intended to complement—not replace—the priority fee market.
+Under ECIP-1111 and ECIP-1112, 100% of the BASEFEE is redirected to the Olympia Treasury. Any decision to allocate a portion of that Treasury-held BASEFEE to miners is optional, fully governed through OIPs, and intended only to complement—not replace—the consensus-level priority-fee incentive mechanism.
 
-If the Olympia DAO elects to direct a percentage of Treasury-held BASEFEE toward long-term network security, those BASEFEE-derived allocations will inherently fluctuate with network activity. A smoothing mechanism can reshape the timing of these optional allocations, reducing short-term volatility and providing a more predictable payout profile without altering consensus-layer incentives.
+If the Olympia DAO elects to direct a percentage of Treasury-held BASEFEE toward long-term network security, governance MAY choose to route those allocations through governance-approved payouts, without creating any entitlement, expectation, or obligation toward miners or any other recipient class. These allocations will inherently fluctuate with network activity. A smoothing mechanism can reshape the timing of such allocations, reducing short-term volatility and providing a more predictable payout profile only if governance elects to activate it, all without altering consensus-layer incentives such as miner tips. This ECIP does not modify, reinterpret, or supplement the monetary policy defined under ECIP-1017; ECIP-1115 smoothing applies only to Treasury-held BASEFEE after deposit into the immutable Treasury defined in ECIP-1112, and affects solely the timing of governance-approved payouts, with no effect on issuance, BASEFEE computation, priority-fee mechanics, or any consensus-layer economic behavior.
 
 Critically, the smoothing framework allows Ethereum Classic to experiment with security-budget policies incrementally and empirically. Rather than setting hard monetary rules (as was done with ECIP-1017) without fee-market data, smoothing keeps BASEFEE-based miner incentives flexible, adjustable, and governance-driven. This design preserves consensus simplicity, avoids premature monetary commitments, and lets the network adapt as Type-2 fee markets mature post-Olympia.
 
@@ -37,7 +37,7 @@ Placing smoothing at the governance layer ensures the mechanism is fully optiona
 
 #### 1. Scope
 
-This ECIP defines a governance-layer mechanism that applies a deterministic L-curve to a configurable portion of Treasury-held BASEFEE revenue after it has been deposited under the consensus rules of ECIP-1111 and ECIP-1112. It introduces no changes to consensus behavior, EIP-1559 `basefee` computation, block validity, or state-transition rules.
+This ECIP defines a governance-layer mechanism that applies a deterministic L-curve to a configurable portion of Treasury-held BASEFEE revenue after it has been deposited under the consensus rules of ECIP-1111 and ECIP-1112. It introduces no changes to consensus behavior, EIP-1559 `basefee` computation, miner priority fees (tips), block rewards, difficulty adjustment, block validity, or state-transition rules.
 
 Smoothing logic operates strictly at the application and governance layer. Any payout generated by smoothing MUST be authorized through the Governor → Timelock → Executor pipeline defined in ECIP-1113 and expressed as a standard Treasury withdrawal under ECIP-1114. This ECIP does not modify Treasury access control, hash-bound proposal semantics, or the execution pathway.
 
@@ -58,7 +58,7 @@ A governance-defined smoothing window of length `N` assigns a payout schedule ac
 - **Normalization:**  
   Σ₍ⱼ₌₁→ᴺ₎ L(j) = 1  
 - **Determinism:**  
-  `L(j)` MUST be fully deterministic, on-chain computable, and depend solely on governance-approved parameters.  
+  `L(j)` MUST be fully deterministic, on-chain computable, and depend solely on governance-approved parameters. `L(j)` MUST NOT rely on off-chain data sources, randomness, or any non-deterministic process.  
 - **Non-negativity:**  
   L(j) ≥ 0 for all j.  
 - **Configurability:**  
@@ -74,11 +74,11 @@ The smoothing model defines only the timing and magnitude of intended allocation
 
 #### 3. Allocation Rule
 
-For each block *k*, the smoothing mechanism produces a sequence of intended allocations `A(k + j)` for `j = 1…N`, as defined in Section 2. These allocations represent scheduled future payouts that MAY be initiated through standard Treasury withdrawal semantics after approval via the governance pipeline defined in ECIP-1113 and ECIP-1114.
+For each block *k*, the smoothing mechanism produces a sequence of intended allocations `A(k + j)` for `j = 1…N`, as defined in Section 2. These allocations represent scheduled values that MAY be used as inputs to standard Treasury withdrawal semantics after approval via the governance pipeline defined in ECIP-1113 and ECIP-1114.
 
-Smoothing defines only the schedule of intended payouts; it does not create rights, claims, or automatic execution. All payouts MUST be explicitly authorized by governance through the OIP process or through a governance-approved smoothing module that prepares Treasury withdrawal calls conforming to ECIP-1114.
+Smoothing defines only the schedule of intended payouts; it does not create rights, claims, reservations, implied obligations, or automatic execution. All payouts MUST be explicitly authorized by governance through the OIP process or through a governance-approved smoothing module that prepares Treasury withdrawal calls conforming to ECIP-1114.
 
-Multiple smoothing schedules MAY overlap. For a given target index `t`, the cumulative intended allocation is the sum of all applicable contributions:
+Multiple smoothing schedules MAY overlap. For a given target index `t`, the cumulative intended allocation—explicitly not a liability, reserve, obligation, earmark, or claim upon Treasury funds—is the sum of all applicable contributions:
 
 `A_total(t) = Σ over all k such that (k + j = t) of A(k + j)`
 
@@ -90,9 +90,11 @@ All such sums MUST be:
 
 This ECIP does not define buffering, queuing, or state-tracking requirements. Any smoothing module that aggregates intended allocations MUST treat the smoothing rule as a deterministic transformation over historical `B_k` values and MUST NOT modify Treasury behavior or access control. Execution of actual payouts remains exclusively governed by the Governor → Timelock → Executor pipeline defined in ECIP-1113 and ECIP-1114.
 
+Smoothing MUST NOT imply buffering, queuing, or earmarking funds inside any contract. Only explicit governance-approved Treasury withdrawals create real movements of value.
+
 #### 4. Miner Distribution Mechanism
 
-Smoothed allocations define only the timing and magnitude of intended payouts. To convert these intended allocations into actual Treasury withdrawals, governance MAY designate a Miner Reward Module responsible for mapping approved smoothing outputs to specific recipient addresses.
+Smoothed allocations define only the hypothetical timing and magnitude of governance-controlled payouts and create no rights, claims, or reservations against Treasury-held funds. To convert any of these allocations into actual Treasury withdrawals, governance MAY designate a Miner Reward Module responsible for mapping approved smoothing outputs to specific recipient addresses. Such a module is optional, governance-defined, and MAY be used for any class of recipients—not only miners—and does not, by itself, create any entitlement, expectation, or preferential claim to Treasury-held BASEFEE for miners or any other group.
 
 The Miner Reward Module operates strictly at the application layer and MUST:
 
@@ -110,6 +112,8 @@ The Miner Reward Module MUST NOT:
 - bypass the governance execution pipeline, or
 - introduce privileged roles, admin keys, or discretionary veto authority.
 
+Recipient identification MUST NOT rely on hashpower or mining-rate data sourced from off-chain systems, unverifiable APIs, or any non-deterministic computation.
+
 Governance MAY choose any miner identification or weighting method, including but not limited to:
 
 - mining pool payout addresses specified through governance,
@@ -118,6 +122,8 @@ Governance MAY choose any miner identification or weighting method, including bu
 - any on-chain computable distribution rule that satisfies ECIP-1113 invariants.
 
 All such methods MUST be deterministic, transparent, and fully configurable through OIP. No miner or pool obtains an automatic right to funds from smoothing; payouts require explicit governance approval and execution through ECIP-1113 and ECIP-1114.
+
+No recipient class—including miners, pools, infrastructure providers, or other groups—receives any priority, privilege, or implied preference under this ECIP. All payouts must be explicitly authorized via governance.
 
 This ECIP does not mandate a specific Miner Reward Module design. Multiple versions MAY exist over time, and governance MAY update or replace them via the OIP process without requiring a network fork.
 
@@ -133,6 +139,8 @@ All parameters and operational components of the smoothing mechanism MUST be gov
 - upgrade or replacement of the Miner Reward Module.
 
 Any module that participates in smoothing MUST operate entirely at the application layer and MUST rely on the Governor → Timelock → Executor execution pipeline for authorization of Treasury withdrawals. Smoothing modules and Miner Reward Modules MUST NOT contain any mechanism for automatic withdrawal, reservation, or direct access to Treasury funds.
+
+No smoothing-related module MAY modify, intercept, or bypass the standard Governor → Timelock → Executor execution path under any circumstances.
 
 Governance MAY adopt, revise, or disable smoothing through standard OIP proposals. Any update to smoothing parameters MUST be:
 
@@ -158,11 +166,13 @@ The Treasury does not compute smoothing schedules, maintain smoothing state, or 
 
 Smoothing modules and Miner Reward Modules MUST NOT introduce any changes to the Treasury’s access control, immutability, or withdrawal semantics. All interactions with the Treasury are limited to governance-approved execution payloads that use the existing withdrawal interface defined in ECIP-1112.
 
+Smoothing MUST NOT add state variables, flags, or configuration references to the Treasury, nor may it require Treasury modification, redeployment, or upgrade.
+
 This ECIP defines no new Treasury functions and introduces no additional responsibilities for Treasury code or consensus-layer behavior.
 
 #### 7. Optionality
 
-The smoothing mechanism defined in this ECIP is fully optional. Governance MAY activate, adjust, suspend, or disable smoothing through the Olympia Improvement Proposal (OIP) process without requiring a network fork or any modification to consensus-layer behavior.
+The smoothing mechanism defined in this ECIP is fully optional. Governance MAY activate, adjust, suspend, or disable smoothing through the Olympia Improvement Proposal (OIP) process without requiring a network fork or any modification to consensus-layer behavior, and disabling smoothing SHALL NOT affect any historical allocations or create retroactive obligations. The default state of the system is that smoothing is inactive unless explicitly activated by an OIP.
 
 Enabling or disabling smoothing does not affect Treasury deposits under ECIP-1111 and ECIP-1112, nor does it change the execution pipeline defined in ECIP-1113 and ECIP-1114. If smoothing is inactive, Treasury-held BASEFEE revenue remains available for standard governance-directed use through existing ECFP processes.
 
@@ -189,7 +199,7 @@ Placing smoothing at the governance layer rather than at consensus offers severa
 - **No automatic entitlements:**  
   Smoothing defines a schedule of intended allocations only. All actual payouts require a successful governance action and are executed through the Governor → Timelock → Executor pipeline defined in ECIP-1113 and the funding-proposal structure of ECIP-1114.
 
-The `R_k → A(k+j)` construction is deliberately chosen because it captures the essence of ℓ-smoothed economic design while remaining fully compatible with Olympia’s Treasury-based governance model. ECIP-1115 offers a governance-controlled tool for reducing short-term volatility in miner incentive flows as fixed issuance declines, while keeping all changes strictly outside the Ethereum Classic consensus layer and preserving the architectural principles of Olympia.
+The `R_k → A(k+j)` construction is deliberately chosen because it captures the essence of ℓ-smoothed economic design while remaining fully compatible with Olympia’s Treasury-based governance model. ECIP-1115 offers a governance-controlled tool for reducing short-term volatility in miner incentive flows as fixed issuance declines, while keeping all changes strictly outside the Ethereum Classic consensus layer and preserving the architectural principles of Olympia. The ℓ-smoothed model is referenced only as economic context and does not prescribe any specific window length, weighting function, or numerical configuration. All parameters remain entirely governance-defined.
 
 ### Backwards Compatibility
 
@@ -199,56 +209,77 @@ Because smoothing operates exclusively at the governance and application layer, 
 
 Smoothing does not modify the Treasury contract defined in ECIP-1112 or the governance execution pipeline defined in ECIP-1113. All withdrawals related to smoothing continue to use the hash-bound, permissionless execution model defined in ECIP-1114. No migrations, state recalculations, or protocol upgrades are required for activation or deactivation of smoothing modules.
 
-As a result, ECIP-1115 is fully backward compatible with all existing Ethereum Classic clients and has no impact on peer-to-peer networking, block production, or chain selection.
+As a result, ECIP-1115 is fully backward compatible with all existing Ethereum Classic clients and has no impact on peer-to-peer networking, block production, or chain selection. Activation or deactivation of smoothing cannot cause a consensus fork under any circumstances, as smoothing operates exclusively at the governance layer.
 
 ### Security Considerations
 
 ECIP-1115 introduces no new consensus-layer behavior and therefore does not alter consensus-level security assumptions. All security considerations are confined to the governance and application layers where smoothing is defined and executed.
 
+Smoothing MUST NOT introduce privileged recipients, preferred entities, or governance-exempt payout flows. All recipients must be subject to identical governance-verification rules.
+
+Smoothing MUST NOT generate any claimable rights, future expectations, implicit liabilities, or accounting obligations against the Treasury.
+
 #### Governance and Execution Integrity
+
 All payouts associated with smoothing MUST be authorized through the Governor → Timelock → Executor pipeline defined in ECIP-1113. Smoothing modules and Miner Reward Modules MUST NOT contain automatic withdrawal logic, reserve Treasury funds, or bypass governance controls. Any deviation from deterministic, governance-approved execution could undermine the immutability guarantees of ECIP-1112.
 
 #### Treasury Isolation
+
 The Olympia Treasury remains an immutable vault that does not compute, store, or track smoothing allocations. Smoothing MUST NOT introduce new Treasury state, mutate existing state, or alter the Treasury’s withdrawal semantics. All payout requests MUST conform to the existing hash-bound execution model defined in ECIP-1114.
 
 #### Deterministic Computation
+
 Smoothing schedules MUST be derived from deterministic, on-chain computable functions defined through governance. Modules MUST NOT rely on off-chain data sources, external oracles, or discretionary operator input. Non-deterministic or off-chain dependencies could produce inconsistent allocations and undermine the auditability of smoothing behavior.
 
 #### Recipient Identification and Fairness
+
 Any method used to identify miners or mining pools—such as self-declared payout addresses, governance-defined recipients, or hashpower-based attestations—MUST be transparent, deterministic, and fully configurable through OIP. No module MAY introduce privileged recipients, opaque weighting systems, or off-chain veto authority.
 
 #### Overlapping Schedules and Aggregation
+
 Multiple smoothing windows may overlap. Implementations MUST ensure that cumulative allocations are computed deterministically and do not exceed governance-approved limits. Aggregation logic MUST NOT imply future claims on Treasury funds; only governance-approved executions may transfer value.
 
 #### Optionality and Activation Risks
+
 Because smoothing is optional, governance MAY activate or deactivate it at any time. Parameter changes or module replacements SHOULD be evaluated carefully to avoid unexpected shifts in payout schedules. Rapid or uncoordinated parameter changes may affect miner expectations but pose no consensus-level risk.
 
 #### No Miner Entitlements
+
 Smoothing defines intended allocations only. No miner obtains an enforceable right to Treasury funds based on smoothing schedules alone. All payouts require explicit approval through ECIP-1113 and MUST be encoded as standard Treasury calls under ECIP-1114.
 
 ### Implementation Notes
 
 This ECIP defines the framework and invariants for smoothing Treasury-held BASEFEE revenue. It does not mandate a particular contract structure or implementation strategy. The following notes provide guidance for implementers while preserving the modularity and immutability guarantees of ECIP-1112–1114.
 
+Failure or misconfiguration of a Smoothing Module or Miner Reward Module MUST NOT impair or delay standard Treasury operations or governance-authorized withdrawals.
+
+No default smoothing parameters or module configurations are defined by this ECIP; governance MUST explicitly activate smoothing before it has any effect.
+
 #### Smoothing Module Structure
+
 A Smoothing Module MAY be implemented as a standalone smart contract or as a set of coordinating contracts responsible for:
+
 - receiving governance-approved parameters (N, f, L(j), and related configuration),
 - computing intended allocations according to the smoothing model,
-- producing deterministic outputs that can be referenced in governance-approved
-  Treasury withdrawal calls.
+- producing deterministic outputs that can be referenced in governance-approved Treasury withdrawal calls.
 
 The Smoothing Module MUST NOT hold funds, modify Treasury balances, or introduce automatic withdrawal logic.
 
 #### Governance Integration
+
 All parameter updates—such as changes to window length, weighting function, allocation fraction, or payout cadence—MUST be applied through the Olympia Improvement Proposal (OIP) process. Implementers SHOULD design modules with clear on-chain parameter interfaces so governance can update configuration safely and transparently.
 
 #### Deterministic Allocation Outputs
+
 Smoothing outputs SHOULD be expressed as deterministic, on-chain computable values. Implementations MAY store intermediate results or compute allocations on demand, provided that:
+
 - output values are reproducible from historical Treasury-held BASEFEE amounts `B_k` and governance-approved parameters; and
 - no off-chain data sources, randomness, or discretionary operator input is required.
 
 #### Miner Reward Module
+
 A Miner Reward Module MAY be implemented to map intended smoothing allocations to recipient addresses. Such modules SHOULD:
+
 - support on-chain computation of payout shares,
 - accept configuration via OIP,
 - expose deterministic logic only,
@@ -257,84 +288,91 @@ A Miner Reward Module MAY be implemented to map intended smoothing allocations t
 The module MUST NOT reserve Treasury funds, maintain privileged withdrawal authority, or depend on opaque off-chain attestation sources.
 
 #### Interaction With the Treasury
+
 The ECIP-1112 Treasury remains unchanged. Implementations MUST treat the Treasury as an immutable vault that only executes authorized withdrawal calls arriving via the Executor.
 
 Any implementation MUST ensure:
+
 - no direct calls to the Treasury outside the governance pipeline,
 - no alteration of Treasury state or semantics, and
 - no expectation that the Treasury stores smoothing state.
 
 #### Off-Chain Tools
+
 Indexers, dashboards, or analytics tools MAY compute and display projected smoothing schedules. Such tooling is non-normative and MUST NOT be required for correct on-chain operation.
 
 #### Parameter Defaults
+
 This ECIP defines no default parameters. Implementers SHOULD assume all parameter values are unset until supplied via OIP, and SHOULD ensure contract initialization requires explicit, governance-approved activation.
 
 ### Related ECIPs in the Olympia Upgrade
 
-ECIP-1115 builds on and extends the Olympia framework introduced in the preceding ECIPs. Each ECIP contributes a distinct layer of the architecture:
+ECIP-1115 builds on the modular Olympia framework defined across ECIPs 1111–1114. Each component provides a distinct layer of the architecture:
 
 - **ECIP-1111 — Olympia EVM and Protocol Upgrades**  
-  Activates EIP-1559 and redirects the `basefee` amount to the Olympia Treasury instead of burning it. This is the source of all BASEFEE revenue available for smoothing.
+  Activates EIP-1559 and redirects the `basefee` amount to the Olympia Treasury. Smoothing operates on Treasury-held BASEFEE as defined in ECIP-1112, independent of transaction type or origin.
 
 - **ECIP-1112 — Olympia Treasury Contract**  
-  Defines the immutable Treasury that receives all consensus-layer `basefee` deposits. Smoothing operates strictly on Treasury-held funds and does not modify Treasury code or access control.
+  Defines the immutable Treasury that receives all consensus-layer `basefee` deposits. Smoothing operates strictly on Treasury-held BASEFEE after deposit and does not alter Treasury code or access control.
 
 - **ECIP-1113 — Olympia DAO Governance Framework**  
-  Establishes the Governor → Timelock → Executor pipeline, which is the exclusive path through which any Treasury withdrawal—including smoothing-related payouts—must be authorized and executed.
+  Establishes the Governor → Timelock → Executor pipeline, which is the exclusive path for authorizing all Treasury withdrawals, including any optional smoothing-related payouts.
 
 - **ECIP-1114 — Ethereum Classic Funding Proposal Process (ECFP)**  
-  Specifies the hash-bound execution format used for Treasury withdrawals. Smoothing-related payouts must be encoded as standard ECIP-1114-compliant execution payloads.
+  Specifies the hash-bound execution format required for all Treasury releases. Any smoothing-derived payout MUST be encoded as a standard ECIP-1114 execution payload.
 
-ECIP-1115 introduces an optional governance-layer mechanism for applying L-curve smoothing to the BASEFEE revenue accumulated under this framework. It does not modify the behavior of ECIP-1111 through ECIP-1114 and can be activated, adjusted, or disabled independently through the OIP process.
+ECIP-1115 adds an optional governance-layer mechanism for applying L-curve smoothing to Treasury-held BASEFEE. It does not modify ECIP-1111 through ECIP-1114 and can be activated, adjusted, or disabled independently through the OIP process.
 
 ### References and Related Work
 
 #### Academic Foundation
+
 - **Roughgarden, Tim.**  
   *Transaction Fee Mechanism Design for the Ethereum Blockchain* (2021).  
-  Section §8.3 introduces the ℓ-smoothed “pay the base fee forward” mechanism, in which the base-fee revenue from block *k* is distributed evenly across the next ℓ blocks.  
-  ECIP-1115 generalizes this concept into a governance-controlled L-curve framework that operates entirely on Treasury-held BASEFEE after consensus-layer deposit.
+  Section §8.3 introduces the ℓ-smoothed “pay the base fee forward” mechanism, distributing per-block revenue across a future window to reduce variance while preserving incentive alignment.  
+  ECIP-1115 adapts this concept into a governance-controlled L-curve applied solely to Treasury-held BASEFEE after consensus-layer deposit.
 
-#### Governance-Layer Precedents (EVM Ecosystem)
-The design of ECIP-1115 follows established best practices from major EVM governance systems that implement delayed, scheduled, or parameterized execution at the application layer rather than at consensus. These systems demonstrate that predictable, scheduled payouts and parameterization are best handled through modular governance frameworks.
+#### Governance-Layer Timing & Scheduling Precedents
 
-- **Compound Governor Bravo**  
-  Defines proposal lifecycle, delayed execution, and parameter governance via Timelock scheduling. Widely regarded as the canonical EVM governance pattern and used as a reference point for Olympia’s Governor → Timelock → Executor design.
+ECIP-1115 aligns with established EVM governance patterns in which **timed execution, scheduled payouts, or parameterized release windows** are implemented at the *governance layer* through timelocks or controlled modules:
 
-- **MakerDAO (MCD + MIPs Framework)**  
-  Uses on-chain executive delays and scheduled parameter updates for monetary policy and system-wide risk parameters. Maker’s governance-layer execution mirrors the separation adopted in ECIP-1115: delayed, rule-based execution *outside* consensus.
+- **Compound Governor Bravo** — canonical timed-execution model using a Governor → Timelock → Executor pipeline.  
+- **MakerDAO (MCD + MIPs)** — scheduled executive actions and parameter updates via time-delayed governance spells.  
+- **Aave Governance v2/v3** — modular, timelocked execution for treasury actions and parameter changes.  
+- **ENS DAO** — utilizes standard governance-and-timelock flows for delayed execution of approved actions.
 
-- **Aave Governance v2/v3**  
-  Employs time-locked execution and modular governance contracts for controlled rollout of risk-parameter updates and treasury payouts. Demonstrates the viability of governance-controlled payout scheduling without consensus involvement.
+These systems demonstrate that **temporal control of payouts and actions is a governance-layer function**, not a consensus modification—mirroring ECIP-1115’s placement of smoothing above protocol semantics.
 
-- **ENS DAO**  
-  Uses standard Governor/Timelock patterns and off-chain metadata binding for transparent, scheduled, rule-based execution flows similar to ECIP-1114 and ECIP-1115.
+#### DAO Treasury Timing & Recurring Distribution Patterns
 
-- **Aragon OSx**  
-  Implements modular governance plugins that perform scheduled actions through permissioned executors, reinforcing the pattern of isolating scheduling and payout logic in governance rather than protocol code.
+A range of DAO treasuries implement **recurring, epoch-based, or streaming payouts** through governance-approved mechanisms. These patterns provide practical precedents for ECIP-1115’s role as a **time-smoothing, governance-controlled payout scheduler**:
 
-These systems collectively validate ECIP-1115’s governance-layer approach: smoothing and parameter scheduling belong at the Olympia DAO layer, not in Ethereum Classic consensus.
+- **Arbitrum DAO** — multi-stage incentive programs and periodic distributions approved through governance.  
+- **Optimism RetroPGF** — recurring, epoch-based funding rounds disbursing treasury allocations in structured intervals.  
+- **Celo Community Fund** — configurable, season-based governance allocations over a defined timeframe.  
+- **Mantle Treasury programs** — modular, recurring distributions from treasury controlled by DAO vote.
 
-#### Treasury-Driven Funding Systems (L1/L2 Ecosystem)
-Several treasuries across Layer 1 and Layer 2 ecosystems implement structured or scheduled payouts at the governance layer:
+These systems show that **temporal structuring of treasury payouts** is common and governance-driven.
 
-- **Arbitrum DAO Treasury** — governance-controlled multi-stage disbursements  
-- **Optimism Governance (RetroPGF)** — milestone- and impact-based payouts with staged release  
-- **Celo Community Fund** — governance-controlled fee distribution with configurable cadence  
-- **Mantle Treasury** — sequencer revenue managed via modular governance processes
+#### On-Chain Streaming & Programmatic Disbursement Tools
 
-These real-world systems show that **delayed, structured, or rule-based payouts are a well-established governance-layer pattern**, not a consensus-layer mechanism.
+Modern DAOs increasingly use streaming or vesting mechanisms to smooth treasury outflows over time in a governance-controlled manner:
 
-#### Alignment With Olympia
-The governance-layer smoothing mechanism in ECIP-1115 aligns with these precedents by:
+- **Superfluid** — real-time streaming of grants, incentives, or salaries under DAO governance, used to distribute treasury funds over predictable intervals.
+- **Hedgey** — on-chain vesting and multi-period distribution tooling widely adopted for structured incentive programs and scheduled treasury disbursements.
 
-- using delayed execution exclusively through a Governor → Timelock → Executor pipeline,  
-- treating smoothing outputs as *intended allocations*, never automatic entitlements,  
-- maintaining strong separation between Treasury immutability (ECIP-1112) and governance control (ECIP-1113),  
-- enabling flexible, evolving policy without hard forks or consensus changes.
+These tools demonstrate that smoothing or time-distribution of payouts is now a common **governance-layer** pattern used to manage treasury volatility and cadence—precisely the role ECIP-1115 fills for Treasury-held BASEFEE.
 
-These patterns reinforce the architectural choice to implement smoothing *on top of* the Olympia governance system rather than embedding it into consensus-layer fee mechanics.
+#### Alignment With Olympia and EVM Best Practices
+
+ECIP-1115 follows these governance-layer precedents by:
+
+- applying a parameterizable timing function (L-curve) exclusively through the Governor → Timelock → Executor pipeline,  
+- treating smoothing outputs as governance-controlled scheduling inputs—not automatic or entitlement-based payouts,  
+- operating solely on Treasury-held funds without altering consensus or modifying ECIP-1112 behavior, and  
+- enabling flexible, adjustable payout policy without any changes to protocol economics.
+
+These properties ensure that smoothing operates entirely at the governance layer, preserves the immutability of the ECIP-1112 Treasury, and introduces no consensus-layer changes.
 
 ### Copyright
 
