docs: add Diego López León as co-author of ECIP-1115
Adds Diego López León (@diega) to the author field of ECIP-1115.

Diego originated the initial L-curve smoothing model discussion and contributed to the technical framing that shaped the current specification. This update ensures proper attribution and aligns the draft with ECIP-1000 authorship norms.

--- a/_specs/ecip-1115.md
+++ b/_specs/ecip-1115.md
@@ -5,7 +5,7 @@ title: Olympia L-Curve Smoothing for Long-Term Network Security
 status: Draft
 type: Meta
 requires: 1111, 1112, 1113, 1114
-author: Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
+author: Diego López León (@diega), Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
 created: 2025-11-15
 discussions-to: https://github.com/orgs/ethereumclassic/discussions/530
 license: CC0-1.0
