Clarify Distributed Fees parameter naming
Updated terminology for fee distribution parameters in ECIP-1120.

--- a/_specs/ecip-1120.md
+++ b/_specs/ecip-1120.md
@@ -143,7 +143,7 @@ In ECIP-1120, total miner rewards will consist of:
 
 - **Block Subsidy** - based on the [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) emission curve, and
 - **Priority Fees** - optional tips, as a fallback pricing mechanism when blocks are full, and
-- **Distributed Fees** - a portion of the Basefees collected from each of the previous `N` ancestor blocks, calculated as follows:
+- **Distributed Fees** - a portion of the Basefees collected from each of the previous `BACKWARD_FEES_BLOCK_COUNT` ancestor blocks, calculated as follows:
 
 ```typescript
 // Pseudocode: Backward-looking fee distribution calculation.
@@ -182,7 +182,7 @@ function calculateDistributedFees(
 }
 ```
 
-Specific parameters, including `N` and the shape of the distribution curve (linear vs decay), are to be determined by [further research](#research-plan).
+Specific parameters, including `BACKWARD_FEES_BLOCK_COUNT` and the shape of the distribution curve (linear vs decay), are to be determined by [further research](#research-plan). A number within the range of 16 and 256 blocks seems reasonable.
 
 ## Rationale
 
