--- a/_specs/ecip-1120.md
+++ b/_specs/ecip-1120.md
@@ -1,12 +1,12 @@
 ---
 lang: en
 ecip: 1120
-title: Basefee Market with Miner Rewards
-subtitle: A minimally complicated implementation of EIP-1559 for Ethereum Classic
+title: WIP Basefee Market with Miner Rewards
+subtitle: An implementation of EIP-1559 for Ethereum Classic
 author: Istora Mandiri (@IstoraMandiri), Diego López León (@diega)
 status: Draft
-type: Standards Track
-category: Core
+type: Informational
+category:
 created: 2025-12-04
 discussions-to: https://github.com/orgs/ethereumclassic/discussions/541
 license: CC0-1.0
