Update ECIP editor names in the document
Rotate inactive editors and add diego as editor

--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -74,7 +74,7 @@ Current ECIP editors:
 
 * @chris-mercer - Christopher Mercer
 * @IstoraMandiri - Istora Mandiri
-* @meowsbits - Mr. Meows D. Bits
+* @Diega - Diego López León 
 * @realcodywburns - Cody Burns
 
 Former ECIP editors:
@@ -86,6 +86,7 @@ Former ECIP editors:
 * @soc1c - Talha Cross
 * @sorpaas - Wei Tang
 * @stevanlohja - Stevan Lohja
+* @meowbits - Mr. Meows D. Bits
 * @YazzyYaz - Yaz Khoury
 
 ## ECIP Editor Responsibilities & Workflow
