Classify 1120 as WIP

--- a/_specs/ecip-1120.md
+++ b/_specs/ecip-1120.md
@@ -4,7 +4,7 @@ ecip: 1120
 title: Basefee Market with Miner Rewards
 subtitle: A minimally complicated implementation of EIP-1559 for Ethereum Classic
 author: Istora Mandiri (@IstoraMandiri), Diego López León (@diega)
-status: Draft
+status: WIP
 type: Standards Track
 category: Core
 created: 2025-12-04
