Fix Olympia ECIPs categorization

--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -2,8 +2,9 @@
 lang: en
 ecip: 1111
 title: Olympia EVM and Protocol Upgrades
-status: Draft
-type: Meta
+status: WIP
+type: Standards Track
+category: Core
 requires: 1112
 author: Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
 created: 2025-07-04
