--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1113
 title: Olympia DAO Governance Framework
-status: Draft
+status: WIP
 type: Meta
 requires: 1112
 author: Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
