--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1114
 title: Ethereum Classic Funding Proposal Process
-status: Draft
+status: WIP
 type: Meta
 requires: 1113
 author: Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
