--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -2,8 +2,9 @@
 lang: en
 ecip: 1112
 title: Olympia Treasury Contract
-status: Draft
-type: Meta
+status: WIP
+type: Standards Track
+category: Core
 requires: 1111
 author: Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
 created: 2025-07-04
