Fix Olympia ECIPs categorization

--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -1,9 +1,10 @@
 ---
 lang: en
 ecip: 1111
-title: Olympia EVM and Protocol Upgrades
+title: WIP Olympia EVM and Protocol Upgrades
 status: Draft
-type: Meta
+type: Standards Track
+category: Core
 requires: 1112
 author: Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
 created: 2025-07-04
