--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -1,9 +1,10 @@
 ---
 lang: en
 ecip: 1112
-title: Olympia Treasury Contract
+title: WIP Olympia Treasury Contract
 status: Draft
-type: Meta
+type: Standards Track
+category: Core
 requires: 1111
 author: Cody Burns (@realcodywburns), Chris Mercer (@chris-mercer)
 created: 2025-07-04
